--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -197,14 +197,44 @@
     <Compile Include="Migrations\201708231357217_FillNameInMembershipTypes.Designer.cs">
       <DependentUpon>201708231357217_FillNameInMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708231516113_AddBirthDateToCustomersTable.cs" />
+    <Compile Include="Migrations\201708231516113_AddBirthDateToCustomersTable.Designer.cs">
+      <DependentUpon>201708231516113_AddBirthDateToCustomersTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708231600586_AddCustomerWithId2.cs" />
+    <Compile Include="Migrations\201708231600586_AddCustomerWithId2.Designer.cs">
+      <DependentUpon>201708231600586_AddCustomerWithId2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708240434120_AddedGenresAndMoviesTables.cs" />
+    <Compile Include="Migrations\201708240434120_AddedGenresAndMoviesTables.Designer.cs">
+      <DependentUpon>201708240434120_AddedGenresAndMoviesTables.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708240440278_AddReleaseDateAddInStockInMoviesTable.cs" />
+    <Compile Include="Migrations\201708240440278_AddReleaseDateAddInStockInMoviesTable.Designer.cs">
+      <DependentUpon>201708240440278_AddReleaseDateAddInStockInMoviesTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708240441201_SeedingGenresTable.cs" />
+    <Compile Include="Migrations\201708240441201_SeedingGenresTable.Designer.cs">
+      <DependentUpon>201708240441201_SeedingGenresTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708240446236_UpdatingMoviesTablewithGenreAndDates.cs" />
+    <Compile Include="Migrations\201708240446236_UpdatingMoviesTablewithGenreAndDates.Designer.cs">
+      <DependentUpon>201708240446236_UpdatingMoviesTablewithGenreAndDates.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708240503115_SeedingMoviesTable.cs" />
+    <Compile Include="Migrations\201708240503115_SeedingMoviesTable.Designer.cs">
+      <DependentUpon>201708240503115_SeedingMoviesTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\NewCustomerViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -250,6 +280,8 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customers\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -293,6 +325,27 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708231357217_FillNameInMembershipTypes.resx">
       <DependentUpon>201708231357217_FillNameInMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708231516113_AddBirthDateToCustomersTable.resx">
+      <DependentUpon>201708231516113_AddBirthDateToCustomersTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708231600586_AddCustomerWithId2.resx">
+      <DependentUpon>201708231600586_AddCustomerWithId2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708240434120_AddedGenresAndMoviesTables.resx">
+      <DependentUpon>201708240434120_AddedGenresAndMoviesTables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708240440278_AddReleaseDateAddInStockInMoviesTable.resx">
+      <DependentUpon>201708240440278_AddReleaseDateAddInStockInMoviesTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708240441201_SeedingGenresTable.resx">
+      <DependentUpon>201708240441201_SeedingGenresTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708240446236_UpdatingMoviesTablewithGenreAndDates.resx">
+      <DependentUpon>201708240446236_UpdatingMoviesTablewithGenreAndDates.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708240503115_SeedingMoviesTable.resx">
+      <DependentUpon>201708240503115_SeedingMoviesTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
