--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -225,6 +225,10 @@
     <Compile Include="Migrations\201708240503115_SeedingMoviesTable.Designer.cs">
       <DependentUpon>201708240503115_SeedingMoviesTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708261345355_AddedMovieValidation.cs" />
+    <Compile Include="Migrations\201708261345355_AddedMovieValidation.Designer.cs">
+      <DependentUpon>201708261345355_AddedMovieValidation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -237,7 +241,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
     <Compile Include="ViewModels\MovieFormViewModel.cs" />
-    <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-lumen.css" />
@@ -349,6 +352,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708240503115_SeedingMoviesTable.resx">
       <DependentUpon>201708240503115_SeedingMoviesTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708261345355_AddedMovieValidation.resx">
+      <DependentUpon>201708261345355_AddedMovieValidation.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
